--- a/src/sample/Tab.fxml
+++ b/src/sample/Tab.fxml
@@ -62,7 +62,7 @@
                             </columnConstraints>
 
                             <!-- Add Header Label -->
-                            <Label text="Registrering av lokale" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="0" GridPane.rowSpan="1">
+                            <Label text="Registrering av Arrangement" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="0" GridPane.rowSpan="1">
                                 <font>
                                     <Font name="Arial" size="25" />
                                 </font>
@@ -94,7 +94,7 @@
                             <Label text="Program : " GridPane.columnIndex="0" GridPane.rowIndex="4">
                             </Label>
                             <!-- legge til program -->
-                            <TextField fx:id="arrPrgram" prefHeight="40" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                            <TextField fx:id="arrProgram" prefHeight="40" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
                             <!-- Legge til tidspunkt -->
                             <Label text="Tidspunkt : " GridPane.columnIndex="0" GridPane.rowIndex="5">
