--- a/src/sample/Tab.fxml
+++ b/src/sample/Tab.fxml
@@ -121,8 +121,11 @@
                             <TextField fx:id="arrLokale" prefHeight="40" GridPane.columnIndex="1" GridPane.rowIndex="8" />
 
                             <!-- Knapp for lagring -->
-                            <Button fx:id="arrRegistrer" defaultButton="true" prefHeight="40" prefWidth="100" text="Registrer" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="9" GridPane.rowSpan="1">
-                                <!-- onAction="#handleSubmitButtonAction"-->
+                            <Button fx:id="arrRegistrer" defaultButton="true" prefHeight="40" prefWidth="100"
+                                    text="Registrer" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="CENTER"
+                                    GridPane.rowIndex="9" GridPane.rowSpan="1"
+                                    onAction="#arrReg">
+
                                 <GridPane.margin>
                                     <Insets bottom="20" left="0" right="0" top="20" />
                                 </GridPane.margin>
